--- a/android-engineer.html
+++ b/android-engineer.html
@@ -123,7 +123,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4489123002'>Job Application for Android Engineer - Customer Solutions at Glovo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/glovo/jobs/4489123002'>Job Application for Android Engineer - Customer Solutions at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -169,7 +169,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/anchorfree/jobs/1930260'>Job Application for Senior Android Engineer (Enterprise Security) at Pango Inc. </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/anchorfree/jobs/1930260'>Job Application for Senior Android Engineer (Enterprise Security) at Pango Inc. </a></h5> 
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -246,7 +246,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/truemotion/jobs/1915179'>Job Application for Senior Android Engineer (mobile telematics) at TrueMotion</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/truemotion/jobs/1915179'>Job Application for Senior Android Engineer (mobile telematics) at TrueMotion</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -263,7 +263,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Mountain View , CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/onefootball/jobs/1920667'>Job Application for Senior Android Engineer - AdTech at Onefootball</a></h5> 
+<h5><a href='https://boards.greenhouse.io/onefootball/jobs/1920667'>Job Application for Senior Android Engineer - AdTech at Onefootball</a></h5> 
 <p><span class="badge badge-light">Berlin  ?  Berlin</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -354,7 +354,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999697091040-android-engineer'>Square Android Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999697091040-android-engineer'>Square Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
@@ -362,7 +362,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">San Francisco, CAUnited States</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://intellectsoft.workable.com/j/40777FEDAC'>Intellectsoft - Jobs: Senior Android Engineer - Apply online</a></h5> 
+<h5><a href='https://intellectsoft.workable.com/j/40777FEDAC'>Intellectsoft - Jobs: Senior Android Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Kyiv Kyiv city, Ukraine Palo Alto</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
@@ -378,7 +378,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/newrelic/job/o2JgbfwW'>New Relic Careers - Senior Android Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/newrelic/job/o2JgbfwW'>New Relic Careers - Senior Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
