--- a/ios-developer.html
+++ b/ios-developer.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585459'>Stellenangebot: iOS-Developer (M/W/D) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/tataunistore/c1f1ddd6-2654-4fa0-a2ec-878f3dd3dfc3'>Tata UniStore Limited - iOS Developer</a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -48,7 +52,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/alyvant/jobs/4498590002'>Job Application for iOS Developer at Alyvant</a></h5> 
+<h5><a href='https://boards.greenhouse.io/alyvant/jobs/4498590002'>Job Application for iOS Developer at Alyvant</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -76,7 +80,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://20bn.applytojob.com/apply/l1cv6r1PdH/IOS-Developer'>iOS Developer - Twenty Billion Neurons GmbH - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://20bn.applytojob.com/apply/l1cv6r1PdH/IOS-Developer'>iOS Developer - Twenty Billion Neurons GmbH - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -160,7 +164,7 @@
 <p><span class="badge badge-light">Mc Lean, VA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://karmarama.workable.com/jobs/1148015'>Senior iOS Developer - Karmarama</a></h5> 
+<h5><a href='https://karmarama.workable.com/jobs/1148015'>Senior iOS Developer - Karmarama</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 6, 2019 ... As a Senior iOS Developer you will need to be: An expert in using Xcode, Git and 
 building continuous integration pipelines; Demonstrable mastery in the?...</p>
@@ -223,7 +227,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://redspace.recruiterbox.com/jobs/fk031y1'>
+<h5><a href='https://redspace.recruiterbox.com/jobs/fk031y1'>
     iOS Developer at REDspace
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -241,7 +245,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Tel Aviv, Israel  Tel Aviv</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
-<h5><a href='https://verisure.avature.net/careers/SendToAFriend?jobId=141'>Send to a friend - iOS Developer - Careers Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verisure.avature.net/careers/SendToAFriend?jobId=141'>Send to a friend - iOS Developer - Careers Portal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -249,7 +253,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Malm?</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verisure.avature.net/careers/ApplicationMethods?jobId=141'>iOS Developer - Careers Portal</a></h5> 
+<h5><a href='https://verisure.avature.net/careers/ApplicationMethods?jobId=141'>iOS Developer - Careers Portal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -321,7 +325,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<h5><a href='https://semios.workable.com/j/F6231B7519'>Semios - Jobs: Backend Application Developer (Node.js) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semios.workable.com/j/F6231B7519'>Semios - Jobs: Backend Application Developer (Node.js) - Apply online</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -361,7 +365,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697103227-ios-developer-yogyakarta-indonesia-'>A Job Thing iOS Developer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697103227-ios-developer-yogyakarta-indonesia-'>A Job Thing iOS Developer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indonesia Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -414,7 +418,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TridentConsultingInc2/743999696806846-ios-developer'>Trident Consulting Inc IOS developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TridentConsultingInc2/743999696806846-ios-developer'>Trident Consulting Inc IOS developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -456,10 +460,6 @@ automotive?...</p>
 <h5><a href='http://tbxnet.applytojob.com/apply/beytnCYVZZ/REMOTE-IOS-DEVELOPER'>REMOTE iOS DEVELOPER - Toolbox TVE - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-05</p>
-<hr/>
-<h5><a href='https://www.workable.com/j/046D8E238F'>Prototype Interactive - Jobs: iOS Lead Developer - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Sep 23, 2019 ... Apply online for the job of iOS Lead Developer at Prototype Interactive.</p>
 <hr/>
 
 
