--- a/android-developer.html
+++ b/android-developer.html
@@ -135,11 +135,11 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://coinjobs.org/job/senior-android-developer-at-camlcase-new-york-ny/'>Senior Android Developer at camlCase (New York, NY) ? CoinJobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coinjobs.org/job/senior-android-developer-at-camlcase-new-york-ny/'>Senior Android Developer at camlCase (New York, NY) ? CoinJobs</a></h5> 
 <p><span class="badge badge-light">New York, NYNew York, NY</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tracktik/jobs/4012246002'>Job Application for Android Developer at TrackTik</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tracktik/jobs/4012246002'>Job Application for Android Developer at TrackTik</a></h5> 
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -157,7 +157,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/commencis/d7fe92a6-ffa5-428a-a70b-50532b7b018f'>Commencis - Senior Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/commencis/d7fe92a6-ffa5-428a-a70b-50532b7b018f'>Commencis - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light">Istanbul</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -325,12 +325,12 @@ development and maintenance of applications aimed at the public as well as?...</
 <p>2 days ago ... As an Android Developer you will be part of our Platform Development team, 
 where you will design and build the next generation of our mobile applications.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/monese/j/920E6B51C3/'>Android Developer with Kotlin skills - Monese</a></h5> 
+<h5><a href='https://apply.workable.com/monese/j/920E6B51C3/'>Android Developer with Kotlin skills - Monese</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... In joining Monese's award winning team as Android Developer you will be 
 participating in driving our already successful banking service to new heights.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/t4bua4n7mdkgcoi68obooz4pba'>Android Developer  | Strategic Employment</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/t4bua4n7mdkgcoi68obooz4pba'>Android Developer  | Strategic Employment</a></h5> 
 <p><span class="badge badge-light">Irvine, CA  Irvine</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -422,7 +422,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/griddynamics/job/oFljbfwe'>Grid Dynamics Careers - Android Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/griddynamics/job/oFljbfwe'>Grid Dynamics Careers - Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -430,7 +430,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/od8tafwI'>Infostretch Corporation Careers - Senior Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/od8tafwI'>Infostretch Corporation Careers - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CA  Redwood City</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -491,7 +491,7 @@ Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
